# style-variant-builder

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
csl_builder/: build.py  prune.py  remove_unused_macros.py
diffs/: american-medical-association-alphabetical.diff  american-medical-association-brackets.diff  american-medical-association-no-et-al.diff  american-medical-association-no-url-alphabetical.diff  american-medical-association-no-url.diff  american-medical-association-parentheses.diff  american-medical-association.diff  apa-annotated-bibliography.diff  apa-cv.diff  apa-no-ampersand.diff  apa-no-initials.diff  apa-note.diff  apa-notes.diff  apa-numeric-superscript-brackets.diff  apa-numeric-superscript.diff  apa-single-spaced.diff  apa-with-abstract.diff  apa.diff  chicago-annotated-bibliography.diff  chicago-author-date-17th-edition.diff  chicago-author-date-access-dates.diff  chicago-author-date-archive-place-first-no-url.diff  chicago-author-date-archive-place-first.diff  chicago-author-date-classic-no-url.diff  chicago-author-date-classic.diff  chicago-author-date-no-url.diff  chicago-author-date-publisher-place-no-url.diff  chicago-author-date-publisher-place.diff  chicago-author-date.diff  chicago-fullnote-bibliography-classic-no-url.diff  chicago-fullnote-bibliography-classic.diff  chicago-fullnote-bibliography-no-url.diff  chicago-fullnote-bibliography-publisher-place-no-url.diff  chicago-fullnote-bibliography-publisher-place.diff  chicago-fullnote-bibliography-short-title-subsequent.diff  chicago-fullnote.diff  (+178 more)
(+23 files in other folders)
