[project]
name = "csl-builder"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Dunning",email = "adunning@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml (>=5.3.0,<6.0.0)",
    "lxml-stubs (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
